# neural-textures

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  texture_mlp_parameters.json
src/: main.cpp  mlp_inference.cu  mlp_inference.h  mlp_loader.cu  mlp_loader.h  mlp_shared.h  screenspace_shader.cu  screenspace_shader.h  window.cpp  window.h
src/app/: app.cpp  app.h  app_state.h  ui.cpp  ui.h
src/neural/: hashgrid.cu  hashgrid.h  hashgrid_device.cuh  mlp.cu  mlp.h  mlp_device.cuh  mlp_types.h  nn_common.cuh
src/neural/utils/: cuda_check.h  cuda_timing.h
src/platform/: window.cpp  window.h
src/platform/capture/: wgc_capture.cpp  wgc_capture.h  window_picker.cpp  window_picker.h
src/render/: neural_renderer.cu  neural_renderer.h
src/tasks/: image_fit.cu  image_fit.h
